@@ -1545,11 +1545,12 @@ class StaticURLInfo(object):
             registry = get_current_registry()
         for (url, spec, route_name) in self._get_registrations(registry):
             if path.startswith(spec):
-                subpath = url_quote(path[len(spec):])
+                subpath = path[len(spec):]
                 if url is None:
                     kw['subpath'] = subpath
                     return request.route_url(route_name, **kw)
                 else:
+                    subpath = url_quote(subpath)
                     return urljoin(url, subpath)
 
         raise ValueError('No static URL definition matching %s' % path)
